--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,9 +1,23 @@
-.headerTop {
-  background: blueviolet;
-  width: 100%;
-  background-image: url(/images/top-1920-1080.jpg);
+@charset "UTF-8";
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
+/*ヘッダー*/
+.headerTop {
+  width: 100%;
+  height: auto;
+  /*トップ画像全画面表示*/
+}
+.headerTop__img {
+  background-image: url(/images/top-1920-1080.jpg);
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center top;
+}
+
+/*gnav*/
 .gnav {
   text-align: center;
 }
