--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,4 +1,24 @@
 @charset "UTF-8";
+body {
+  font-family: swear-display, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-family: swear-display, serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+a {
+  text-decoration: none;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  color: #707070;
+}
+
+a:hover {
+  opacity: 0.5;
+}
+
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
@@ -28,13 +48,145 @@
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  padding: 70px;
 }
 .gnav__item {
   font-size: 48px;
   color: #707070;
 }
 
+/*h2画像*/
+.h2Img {
+  margin: 200px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-image: url(/images/Marble07.jpg);
+  background-repeat: no-repeat;
+  text-align: center;
+  width: 40%;
+  color: #fcfcfc;
+  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070, -1px 1px 0 #707070, 1px -1px 0 #707070, 0px 1px 0 #707070, -1px 0 #707070, -1px 0 0 #707070, 1px 0 0 #707070;
+}
+
+.h2Img__skill {
+  margin: 200px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-image: url(/images/Marble09-h.jpg);
+  background-repeat: no-repeat;
+  text-align: center;
+  width: 40%;
+  color: #fcfcfc;
+  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070, -1px 1px 0 #707070, 1px -1px 0 #707070, 0px 1px 0 #707070, -1px 0 #707070, -1px 0 0 #707070, 1px 0 0 #707070;
+}
+
+.h2Img__about {
+  margin: 200px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-image: url(/images/Marble08.jpg);
+  background-repeat: no-repeat;
+  text-align: center;
+  width: 40%;
+  color: #fcfcfc;
+  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070, -1px 1px 0 #707070, 1px -1px 0 #707070, 0px 1px 0 #707070, -1px 0 #707070, -1px 0 0 #707070, 1px 0 0 #707070;
+}
+
+.h2Img__contact {
+  margin: 200px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-image: url(/images/Marble08-2.jpg);
+  background-repeat: no-repeat;
+  text-align: center;
+  width: 40%;
+  color: #fcfcfc;
+  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070, -1px 1px 0 #707070, 1px -1px 0 #707070, 0px 1px 0 #707070, -1px 0 #707070, -1px 0 0 #707070, 1px 0 0 #707070;
+}
+
+/*h2共通*/
 .head2 {
+  font-size: 80px;
+}
+
+.centerBox {
+  text-align: center;
+}
+
+/*モックアップ*/
+.workBox__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+}
+.workBox__list--item {
+  width: 90%;
+}
+
+/*viewmoreボタン*/
+.viewMore {
+  display: inline-block;
+  background-color: #F4C5DE;
+  width: 265px;
+  height: auto;
+  font-size: 30px;
+  color: #707070;
+  border-radius: 20px;
+  padding: 2%;
+  margin: 10%;
+}
+
+/*skill grid*/
+.skill__list {
+  text-align: center;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(7, 200px);
+  gap: 20px;
+}
+.skill__list--item {
+  background-color: pink;
+}
+
+/*about flex*/
+.about__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.about__list--img {
+  width: 30%;
+  padding-right: 5%;
+}
+.about__list p {
+  font-size: 30px;
+}
+
+.thanks {
   font-size: 80px;
 }
 /*# sourceMappingURL=style.css.map */
