--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -57,7 +57,7 @@ a:hover {
 
 /*h2画像*/
 .h2Img {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -73,7 +73,7 @@ a:hover {
 }
 
 .h2Img__skill {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .h2Img__about {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -105,7 +105,7 @@ a:hover {
 }
 
 .h2Img__contact {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -158,15 +158,17 @@ a:hover {
 .skill__list {
   text-align: center;
   display: grid;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(7, 200px);
-  gap: 20px;
+  width: 80%;
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
 }
 .skill__list--item {
   background-color: pink;
+}
+.skill__list--item img {
+  width: 70%;
+  margin-top: -20px;
 }
 
 /*about flex*/
@@ -188,5 +190,16 @@ a:hover {
 
 .thanks {
   font-size: 80px;
+}
+
+footer {
+  background-image: url(/images/footer08-2.jpg);
+  min-height: 20vh;
+  background-size: cover;
+}
+footer p {
+  font-size: 20px;
+  text-align: center;
+  padding: 3%;
 }
 /*# sourceMappingURL=style.css.map */
