--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -67,7 +67,7 @@ a:hover {
 
 /*h2画像*/
 .h2Img {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble07.jpg);
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .h2Img__skill {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble09-h.jpg);
@@ -97,7 +97,7 @@ a:hover {
 }
 
 .h2Img__about {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble08.jpg);
@@ -112,7 +112,7 @@ a:hover {
 }
 
 .h2Img__contact {
-  margin: 200px 0;
+  margin: 0 0 100px 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble08-2.jpg);
@@ -164,13 +164,17 @@ a:hover {
 .skill__list {
   text-align: center;
   display: grid;
-  justify-content: center;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(7, 200px);
-  gap: 20px;
+  width: 80%;
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
 
   &--item {
     background-color: pink;
+    img {
+      width: 70%;
+      margin-top: -20px;
+    }
   }
 }
 
@@ -186,9 +190,20 @@ justify-content: center;
     p {
       font-size: 30px;
     }
-  
 }
 
 .thanks {
   font-size: 80px;
+}
+
+footer {
+  background-image: url(/images/footer08-2.jpg);
+  min-height: 20vh;
+  background-size: cover;
+  p {
+    font-size: 20px;
+    text-align: center;
+    padding: 3%;
+  }
+
 }
