--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -9,9 +9,9 @@ body {
   font-weight: 400;
   font-style: normal;
   // Swear Display Bold
-  font-family: swear-display, serif;
-  font-weight: 700;
-  font-style: normal;
+  // font-family: swear-display, serif;
+  // font-weight: 700;
+  // font-style: normal;
 }
 
 // 全てのaタグ
@@ -52,28 +52,27 @@ a:hover {
   // flex親要素
   &__link {
     list-style-type: none;
-
     display: flex;
     justify-content: space-around;
-    padding: 70px;
+    padding: 3%;
   }
 
   // flex子要素
   &__item {
-    font-size: 48px;
+    font-size: 2rem;
     color: #707070;
   }
 }
 
 /*h2画像*/
 .h2Img {
-  margin: 0 0 100px 0;
+  margin: 4% 0 4% 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble07.jpg);
   background-repeat: no-repeat;
   text-align: center;
-  width: 40%;
+  width: 30%;
   color: #fcfcfc;
   text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
     -1px 1px 0 #707070, 1px -1px 0 #707070,
@@ -82,13 +81,13 @@ a:hover {
 }
 
 .h2Img__skill {
-  margin: 0 0 100px 0;
+  margin: 4% 0 4% 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble09-h.jpg);
   background-repeat: no-repeat;
   text-align: center;
-  width: 40%;
+  width: 30%;
   color: #fcfcfc;
   text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
     -1px 1px 0 #707070, 1px -1px 0 #707070,
@@ -97,13 +96,13 @@ a:hover {
 }
 
 .h2Img__about {
-  margin: 0 0 100px 0;
+  margin: 4% 0 4% 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble08.jpg);
   background-repeat: no-repeat;
   text-align: center;
-  width: 40%;
+  width: 30%;
   color: #fcfcfc;
   text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
     -1px 1px 0 #707070, 1px -1px 0 #707070,
@@ -112,13 +111,13 @@ a:hover {
 }
 
 .h2Img__contact {
-  margin: 0 0 100px 0;
+  margin: 4% 0 4% 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble08-2.jpg);
   background-repeat: no-repeat;
   text-align: center;
-  width: 40%;
+  width: 30%;
   color: #fcfcfc;
   text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
     -1px 1px 0 #707070, 1px -1px 0 #707070,
@@ -130,7 +129,7 @@ a:hover {
 
 /*h2共通*/
 .head2 {
-  font-size: 80px;
+  font-size: 2.5rem;
 }
 
 .centerBox {
@@ -151,7 +150,7 @@ a:hover {
 .viewMore {
   display: inline-block;
   background-color: #F4C5DE;
-  width: 265px;
+  width: 20%;
   height: auto;
   font-size: 30px;
   color: #707070;
