--- a/portfolio/scss/about.scss
+++ b/portfolio/scss/about.scss
@@ -2,6 +2,17 @@
 
 @use 'var' as v;
 
+body {
+  // Swear Display Light
+  font-family: swear-display, serif;
+  font-weight: 400;
+  font-style: normal;
+  // Swear Display Bold
+  // font-family: swear-display, serif;
+  // font-weight: 700;
+  // font-style: normal;
+}
+
 /*ヘッダー*/
 .headerTop {
   width: 100%;
@@ -14,6 +25,10 @@
     min-height: 70vh;
     background-size: cover;
     background-position: center;
+    h1 {
+      display: inline-block;
+      opacity: .5;
+    }
   }
 }
 
@@ -69,56 +84,4 @@
   margin-bottom: 100px;
 }
 
-/*タイムライン全体の設定*/
-.timeline{
-	max-width: 400px;
-	width:100%;
-	margin:50px auto;
-	padding:0 30px;
-}
 
-.timeline li{
-    /*線の起点とするためrelativeを設定*/
-    position: relative;
-	list-style: none;
-	padding:0 0 20px 0;
-}
-
-.timeline dl{
-	margin:0 0 20px 3em;
-}
-
-/*絶対配置で線を設定*/
-.border-line {
-    /*線の位置*/
-	position: absolute;
-	left:0.2em;
-	top:0;
-	width:2px;/*線の太さ*/
-	height:0;/*はじめは高さを0に*/
-	background: #ccc;
-}
-
-/*タイムラインの見出し横の丸の位置と形状*/
-.timeline li::after{
-	content:'';
-	position: absolute;
-	top:0;
-	left:0;
-	width:10px;
-	height: 10px;
-	background:#666;
-	border-radius: 50%;
-}
-
-footer {
-  background-image: url(/images/footer08-2.jpg);
-  min-height: 20vh;
-  background-size: cover;
-  p {
-    font-size: 20px;
-    text-align: center;
-    padding: 3%;
-  }
-
-}
