--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -21,9 +21,7 @@ a {
   color: #707070;
 }
 
-a:hover {
-  opacity: .5;
-}
+
 
 // 要素中央寄せ　最大幅1200px
 .wrapper {
@@ -38,10 +36,91 @@ a:hover {
 
   /*トップ画像全画面表示*/
   &__img {
-    background-image: url(/images/top-1920-1080.jpg);
+    background-image: url(/images/top-1920-1080non.jpg);
     min-height: 100vh;
     background-size: cover;
     background-position: center top;
+    position: relative;
+    padding-top: 10%;
+
+    h1 {
+      display: inline-block;
+      font-size: 8rem;
+      font-weight: normal;
+      // opacity: 0;
+      color: #fff;
+      a {
+        color: #fff;
+      }
+    }
+    .indent {
+      // opacity: 0;
+      position: absolute;
+      top: 65%;
+      right: 1%;
+      font-size: 8rem;
+      color: #fff;
+    }
+  }
+
+  .scroll {
+    // text-align: center;
+    position: absolute;
+    bottom: 5rem;
+    right: 20%;
+       //丁度よく下側に設置するのにposition+bottomプロパティを使用
+    width: 2em;
+    height: 2em;
+       //スクロールボタンのタップorクリックを受け付けるサイズ
+    span {
+      width: 3em;
+      height: 3em;
+      position: absolute;
+       //矢印がずれるためtopなどで位置調整をする
+      top: 50%;
+      left: 100%;
+      transform: rotate(-45deg);
+      border-left: 1px solid #F5F5F5;
+      border-bottom: 1px solid #F5F5F5;
+      z-index: 2;
+      animation: popping-arrow 2s infinite ease-out;
+       //アニメーションさせる場合の設定
+       //@keyframesで設定したアニメーション名、秒数、infinite→無限繰り返し
+    }
+   }
+}
+@keyframes popping-arrow {
+  0% {
+    transform: translateY(0) rotate(-45deg);
+  }
+  30% {
+    transform: translateY(.5em) rotate(-45deg);
+  }
+  60% {
+    transform: translateY(0) rotate(-45deg);
+  }
+}
+
+.next-section {
+  padding: 3em 1.5em;
+  background-color: #78909C;
+  h2 {
+    margin-bottom: 2em;
+    text-align: center;
+    font-size: 24px;
+    letter-spacing: .1em;
+    &::after {
+      content: '';
+      display: block;
+      width: 10%;
+      height: 2px;
+      margin-top: .5em;
+      margin-left: 45%;
+      background: #F5F5F5;
+    }
+  }
+  p {
+    padding: 1.5em;
   }
 }
 
@@ -55,6 +134,32 @@ a:hover {
     display: flex;
     justify-content: space-around;
     padding: 3%;
+    a {
+      
+        position: relative;
+        display: inline-block;
+        text-decoration: none;
+    }
+      a::after {
+        position: absolute;
+        bottom: -4px;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: #333;
+        transform: scale(0, 1);
+        transform-origin: right top;
+        transition: transform .3s;
+      }
+      &:hover::after {
+        transform-origin: left top;
+        transform: scale(1, 1);
+      }
+      
+      a:hover {
+        opacity: .5;
+    }
   }
 
   // flex子要素
@@ -147,16 +252,71 @@ a:hover {
 }
 
 /*viewmoreボタン*/
-.viewMore {
+// .viewMore {
+//   display: inline-block;
+//   background-color: #F4C5DE;
+//   width: 20%;
+//   height: auto;
+//   font-size: 30px;
+//   color: #707070;
+//   border-radius: 20px;
+//   padding: 2%;
+//   margin: 10%;
+// }
+
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  position: relative;
   display: inline-block;
-  background-color: #F4C5DE;
-  width: 20%;
-  height: auto;
-  font-size: 30px;
+  padding: .5rem 2rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
   color: #707070;
-  border-radius: 20px;
-  padding: 2%;
-  margin: 10%;
+  border-radius: 0.5rem;
+}
+a.btn-flat {
+  overflow: hidden;
+  padding: 1.5rem 4rem;
+  color: #000;
+  border-radius: 0;
+  background: #fff;
+}
+
+a.btn-flat span {
+  position: relative;
+}
+
+a.btn-flat:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  -webkit-transform: translateX(-96%);
+  transform: translateX(-96%);
+  background: pink;
+}
+
+a.btn-flat:hover:before {
+  -webkit-transform: translateX(0%);
+  transform: translateX(0%);
 }
 
 /*skill grid*/
@@ -169,7 +329,7 @@ a:hover {
   gap: 10px;
 
   &--item {
-    background-color: pink;
+    // background-color: pink;
     img {
       width: 70%;
       margin-top: -20px;
