--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -2,7 +2,6 @@
 body {
   font-family: swear-display, serif;
   font-weight: 400;
-  font-style: normal;
 }
 
 a {
@@ -10,6 +9,32 @@ a {
   -webkit-transition: 0.6s;
   transition: 0.6s;
   color: #707070;
+}
+
+.my-parts {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+}
+
+.my-parts::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background: #707070;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.my-parts:hover {
+  cursor: pointer;
+}
+
+.my-parts:hover::after {
+  width: 100%;
 }
 
 .wrapper {
@@ -47,14 +72,15 @@ a {
   font-size: 8rem;
   color: #fff;
 }
-.headerTop .scroll {
+
+scroll {
   position: absolute;
   bottom: 5rem;
-  right: 20%;
+  right: 100%;
   width: 2em;
   height: 2em;
 }
-.headerTop .scroll span {
+scroll span {
   width: 3em;
   height: 3em;
   position: absolute;
@@ -134,37 +160,6 @@ a {
       justify-content: space-around;
   padding: 3%;
 }
-.gnav__link a {
-  position: relative;
-  display: inline-block;
-  text-decoration: none;
-}
-.gnav__link a::after {
-  position: absolute;
-  bottom: -4px;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 2px;
-  background: #333;
-  -webkit-transform: scale(0, 1);
-          transform: scale(0, 1);
-  -webkit-transform-origin: right top;
-          transform-origin: right top;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-}
-.gnav__link:hover::after {
-  -webkit-transform-origin: left top;
-          transform-origin: left top;
-  -webkit-transform: scale(1, 1);
-          transform: scale(1, 1);
-}
-.gnav__link a:hover {
-  opacity: 0.5;
-}
 .gnav__item {
   font-size: 2rem;
   color: #707070;
@@ -172,7 +167,7 @@ a {
 
 /*h2画像*/
 .h2Img {
-  margin: 4% 0 4% 0;
+  margin: 6% 0 6% 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -188,7 +183,7 @@ a {
 }
 
 .h2Img__skill {
-  margin: 4% 0 4% 0;
+  margin: 6% 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -204,7 +199,7 @@ a {
 }
 
 .h2Img__about {
-  margin: 4% 0 4% 0;
+  margin: 10% 0 10% 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -220,7 +215,7 @@ a {
 }
 
 .h2Img__contact {
-  margin: 4% 0 4% 0;
+  margin: 6% 0 6% 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,10 +251,10 @@ a {
   width: 90%;
 }
 
-/*viewmoreボタン*/
 .btn,
 a.btn,
 button.btn {
+  border: 2px solid pink;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1.5;
@@ -313,13 +308,21 @@ a.btn-flat:hover:before {
 }
 
 /*skill grid*/
+#skill p {
+  font-size: 2rem;
+  padding: 3% 0 3% 0;
+}
+
 .skill__list {
   text-align: center;
   display: grid;
   width: 80%;
   margin: 0 auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 10px;
+}
+.skill__list--item {
+  background-color: pink;
 }
 .skill__list--item img {
   width: 70%;
@@ -327,24 +330,48 @@ a.btn-flat:hover:before {
 }
 
 /*about flex*/
-.about__list {
+.about__list--img {
+  width: 30%;
+  padding: 0 5% 5% 0;
+}
+.about__list--item {
+  font-size: 10%;
+}
+
+.centerBox {
+  padding-bottom: 5%;
+}
+.centerBox .thanks {
+  font-size: 2rem;
+  padding-bottom: 5%;
+}
+
+.cbtBox__flex {
+  width: 30%;
+  margin: 0 auto;
+}
+.cbtBox__flex--item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 10%;
 }
-.about__list--img {
-  width: 30%;
-  padding-right: 5%;
-}
-.about__list p {
-  font-size: 30px;
+.cbtBox__flex .submitBtn {
+  margin-top: 20%;
 }
 
-.thanks {
-  font-size: 80px;
+input,
+textarea {
+  display: inline-block;
+  border: 1px solid #000;
+  width: 80%;
+}
+
+input[type=submit] {
+  opacity: 0;
 }
 
 footer {
