--- a/portfolio/scss/about.scss
+++ b/portfolio/scss/about.scss
@@ -42,10 +42,8 @@ body {
   text-align: center;
   width: 40%;
   color: #fcfcfc;
-  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
-    -1px 1px 0 #707070, 1px -1px 0 #707070,
-    0px 1px 0 #707070, 0-1px 0 #707070,
-    -1px 0 0 #707070, 1px 0 0 #707070;
+  text-shadow: $text-shadow;
+
 }
 
 /*h2画像*/
@@ -58,10 +56,7 @@ body {
   text-align: center;
   width: 40%;
   color: #fcfcfc;
-  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
-    -1px 1px 0 #707070, 1px -1px 0 #707070,
-    0px 1px 0 #707070, 0-1px 0 #707070,
-    -1px 0 0 #707070, 1px 0 0 #707070;
+  text-shadow: $text-shadow;
 }
 
 /*h2画像*/
@@ -74,10 +69,7 @@ body {
   text-align: center;
   width: 40%;
   color: #fcfcfc;
-  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
-    -1px 1px 0 #707070, 1px -1px 0 #707070,
-    0px 1px 0 #707070, 0-1px 0 #707070,
-    -1px 0 0 #707070, 1px 0 0 #707070;
+  text-shadow: $text-shadow;
 }
 
 .about__list {
