--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -7,20 +7,38 @@ body {
   // Swear Display Light
   font-family: swear-display, serif;
   font-weight: 400;
-  font-style: normal;
-  // Swear Display Bold
-  // font-family: swear-display, serif;
-  // font-weight: 700;
-  // font-style: normal;
+
 }
 
 // 全てのaタグ
 a {
   text-decoration: none;
   transition: .6s;
-  color: #707070;
+  color: v.$point-color;
 }
 
+// ホバーアクション
+.my-parts {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+}
+.my-parts::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background:v.$point-color;
+  transition: all .3s ease 0s;
+}
+.my-parts:hover {
+  cursor: pointer;
+}
+.my-parts:hover::after {
+  width: 100%;
+}
 
 
 // 要素中央寄せ　最大幅1200px
@@ -53,6 +71,7 @@ a {
         color: #fff;
       }
     }
+  
     .indent {
       // opacity: 0;
       position: absolute;
@@ -62,66 +81,65 @@ a {
       color: #fff;
     }
   }
-
-  .scroll {
-    // text-align: center;
+}
+scroll {
+  // text-align: center;
+  position: absolute;
+  bottom: 5rem;
+  right: 100%;
+     //丁度よく下側に設置するのにposition+bottomプロパティを使用
+  width: 2em;
+  height: 2em;
+     //スクロールボタンのタップorクリックを受け付けるサイズ
+  span {
+    width: 3em;
+    height: 3em;
     position: absolute;
-    bottom: 5rem;
-    right: 20%;
-       //丁度よく下側に設置するのにposition+bottomプロパティを使用
-    width: 2em;
-    height: 2em;
-       //スクロールボタンのタップorクリックを受け付けるサイズ
-    span {
-      width: 3em;
-      height: 3em;
-      position: absolute;
-       //矢印がずれるためtopなどで位置調整をする
-      top: 50%;
-      left: 100%;
-      transform: rotate(-45deg);
-      border-left: 1px solid #F5F5F5;
-      border-bottom: 1px solid #F5F5F5;
-      z-index: 2;
-      animation: popping-arrow 2s infinite ease-out;
-       //アニメーションさせる場合の設定
-       //@keyframesで設定したアニメーション名、秒数、infinite→無限繰り返し
-    }
-   }
-}
-@keyframes popping-arrow {
-  0% {
-    transform: translateY(0) rotate(-45deg);
-  }
-  30% {
-    transform: translateY(.5em) rotate(-45deg);
-  }
-  60% {
-    transform: translateY(0) rotate(-45deg);
+     //矢印がずれるためtopなどで位置調整をする
+    top: 50%;
+    left: 100%;
+    transform: rotate(-45deg);
+    border-left: 1px solid #F5F5F5;
+    border-bottom: 1px solid #F5F5F5;
+    z-index: 2;
+    animation: popping-arrow 2s infinite ease-out;
+     //アニメーションさせる場合の設定
+     //@keyframesで設定したアニメーション名、秒数、infinite→無限繰り返し
   }
 }
 
+@keyframes popping-arrow {
+0% {
+  transform: translateY(0) rotate(-45deg);
+}
+30% {
+  transform: translateY(.5em) rotate(-45deg);
+}
+60% {
+  transform: translateY(0) rotate(-45deg);
+}
+}
 .next-section {
-  padding: 3em 1.5em;
-  background-color: #78909C;
-  h2 {
-    margin-bottom: 2em;
-    text-align: center;
-    font-size: 24px;
-    letter-spacing: .1em;
-    &::after {
-      content: '';
-      display: block;
-      width: 10%;
-      height: 2px;
-      margin-top: .5em;
-      margin-left: 45%;
-      background: #F5F5F5;
-    }
+padding: 3em 1.5em;
+background-color: #78909C;
+h2 {
+  margin-bottom: 2em;
+  text-align: center;
+  font-size: 24px;
+  letter-spacing: .1em;
+  &::after {
+    content: '';
+    display: block;
+    width: 10%;
+    height: 2px;
+    margin-top: .5em;
+    margin-left: 45%;
+    background: #F5F5F5;
   }
-  p {
-    padding: 1.5em;
-  }
+}
+p {
+  padding: 1.5em;
+}
 }
 
 /*gnav*/
@@ -134,44 +152,22 @@ a {
     display: flex;
     justify-content: space-around;
     padding: 3%;
-    a {
-      
-        position: relative;
-        display: inline-block;
-        text-decoration: none;
-    }
-      a::after {
-        position: absolute;
-        bottom: -4px;
-        left: 0;
-        content: '';
-        width: 100%;
-        height: 2px;
-        background: #333;
-        transform: scale(0, 1);
-        transform-origin: right top;
-        transition: transform .3s;
-      }
-      &:hover::after {
-        transform-origin: left top;
-        transform: scale(1, 1);
-      }
-      
-      a:hover {
-        opacity: .5;
-    }
+    
+  
   }
 
   // flex子要素
   &__item {
     font-size: 2rem;
-    color: #707070;
+    color: v.$point-color;
+
   }
+
 }
 
 /*h2画像*/
 .h2Img {
-  margin: 4% 0 4% 0;
+  margin: 6% 0 6% 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble07.jpg);
@@ -179,14 +175,12 @@ a {
   text-align: center;
   width: 30%;
   color: #fcfcfc;
-  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
-    -1px 1px 0 #707070, 1px -1px 0 #707070,
-    0px 1px 0 #707070, 0-1px 0 #707070,
-    -1px 0 0 #707070, 1px 0 0 #707070;
+  text-shadow: v.$text-shadow;
+
 }
 
 .h2Img__skill {
-  margin: 4% 0 4% 0;
+  margin: 6% 0 0 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble09-h.jpg);
@@ -194,14 +188,12 @@ a {
   text-align: center;
   width: 30%;
   color: #fcfcfc;
-  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
-    -1px 1px 0 #707070, 1px -1px 0 #707070,
-    0px 1px 0 #707070, 0-1px 0 #707070,
-    -1px 0 0 #707070, 1px 0 0 #707070;
+  text-shadow: v.$text-shadow;
+
 }
 
 .h2Img__about {
-  margin: 4% 0 4% 0;
+  margin: 10% 0 10% 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble08.jpg);
@@ -209,14 +201,12 @@ a {
   text-align: center;
   width: 30%;
   color: #fcfcfc;
-  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
-    -1px 1px 0 #707070, 1px -1px 0 #707070,
-    0px 1px 0 #707070, 0-1px 0 #707070,
-    -1px 0 0 #707070, 1px 0 0 #707070;
+  text-shadow: v.$text-shadow;
+
 }
 
 .h2Img__contact {
-  margin: 4% 0 4% 0;
+  margin: 6% 0 6% 0;
   display: flex;
   justify-content: center;
   background-image: url(/images/Marble08-2.jpg);
@@ -224,10 +214,7 @@ a {
   text-align: center;
   width: 30%;
   color: #fcfcfc;
-  text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070,
-    -1px 1px 0 #707070, 1px -1px 0 #707070,
-    0px 1px 0 #707070, 0-1px 0 #707070,
-    -1px 0 0 #707070, 1px 0 0 #707070;
+  text-shadow: v.$text-shadow;
 
 }
 
@@ -251,23 +238,11 @@ a {
   }
 }
 
-/*viewmoreボタン*/
-// .viewMore {
-//   display: inline-block;
-//   background-color: #F4C5DE;
-//   width: 20%;
-//   height: auto;
-//   font-size: 30px;
-//   color: #707070;
-//   border-radius: 20px;
-//   padding: 2%;
-//   margin: 10%;
-// }
-
 
 .btn,
 a.btn,
 button.btn {
+  border: 2px solid pink ;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1.5;
@@ -319,41 +294,83 @@ a.btn-flat:hover:before {
   transform: translateX(0%);
 }
 
+
+
+
 /*skill grid*/
+#skill p {
+  font-size: 2rem;
+  padding: 3% 0 3% 0;
+}
 .skill__list {
   text-align: center;
   display: grid;
   width: 80%;
   margin: 0 auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 10px;
 
+
   &--item {
-    // background-color: pink;
+    background-color: pink;
     img {
       width: 70%;
       margin-top: -20px;
     }
   }
+
 }
 
 /*about flex*/
 .about__list {
-
-display: flex;
-justify-content: center;
+// display: flex;
+// justify-content: center;
+// margin: 6% 0 5% 5%;
+  
   &--img {
     width: 30%;
-    padding-right: 5%;
+    padding: 0 5% 5% 0;
 }
-    p {
-      font-size: 30px;
-    }
+&--item {
+  
+    font-size: 10%;
+
+}
 }
 
+.centerBox {
+  padding-bottom: 5%;
+
 .thanks {
-  font-size: 80px;
+  font-size: 2rem;
+  padding-bottom: 5%;
 }
+}
+
+.cbtBox__flex {
+width: 30%;
+margin:0 auto;
+&--item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10%;
+}
+.submitBtn {
+  margin-top: 20%;
+}
+}
+
+input,
+textarea {
+  display: inline-block;
+  border: 1px solid #000;
+  width: 80%;
+}
+input[type="submit"] {
+  opacity: 0;
+}
+
+
 
 footer {
   background-image: url(/images/footer08-2.jpg);
@@ -365,4 +382,8 @@ footer {
     padding: 3%;
   }
 
+}
+
+@media screen and (max-width: 767px){
+  
 }
