--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -152,13 +152,14 @@ scroll span {
   text-align: center;
 }
 .gnav__link {
+  background-color: #ffe4e1;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding: 3%;
+  padding: 2%;
 }
 .gnav__item {
   font-size: 2rem;
@@ -308,34 +309,72 @@ a.btn-flat:hover:before {
 }
 
 /*skill grid*/
-#skill p {
+.skillBox {
   font-size: 2rem;
   padding: 3% 0 3% 0;
+}
+
+.cateBox {
+  font-size: 3rem;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 3rem;
+  border-bottom: 1px solid #707070;
 }
 
 .skill__list {
   text-align: center;
   display: grid;
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr;
+  grid-template-rows: 3fr;
   gap: 10px;
 }
-.skill__list--item {
-  background-color: pink;
-}
 .skill__list--item img {
-  width: 70%;
-  margin-top: -20px;
+  width: 100%;
+  margin-top: -2vw;
 }
 
 /*about flex*/
+.about__list {
+  background-color: #ffe4e1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 5%;
+  padding-top: 5%;
+}
 .about__list--img {
   width: 30%;
-  padding: 0 5% 5% 0;
+  height: 50%;
+  padding: 5% 5% 5% 5%;
 }
 .about__list--item {
-  font-size: 10%;
+  padding-bottom: 5%;
+  font-size: 1rem;
+  text-align: left;
+}
+.about__list--like {
+  text-align: center;
+  font-size: 3rem;
+}
+.about__list--like--1 {
+  width: 2%;
+}
+.about__list .s2 {
+  width: 10%;
+}
+.about__list .about__list--likes p {
+  font-size: 3rem;
+}
+.about__list .ebi {
+  position: relative;
+  font-size: 3rem;
+  top: 20%;
 }
 
 .centerBox {
@@ -372,6 +411,8 @@ textarea {
 
 input[type=submit] {
   opacity: 0;
+  position: relative;
+  top: 40px;
 }
 
 footer {
