--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -148,10 +148,11 @@ p {
 
   // flex親要素
   &__link {
+    background-color: #ffe4e1;
     list-style-type: none;
     display: flex;
     justify-content: space-around;
-    padding: 3%;
+    padding: 2%;
     
   
   }
@@ -298,44 +299,73 @@ a.btn-flat:hover:before {
 
 
 /*skill grid*/
-#skill p {
+.skillBox {
   font-size: 2rem;
   padding: 3% 0 3% 0;
+}
+// コーディングとかデザインとか題名
+.cateBox {
+  font-size: 3rem;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 3rem;
+  border-bottom: 1px solid v.$point-color;
 }
 .skill__list {
   text-align: center;
   display: grid;
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr;
+  grid-template-rows: 3fr;
   gap: 10px;
 
 
   &--item {
-    background-color: pink;
+    // background-color: pink;
     img {
-      width: 70%;
-      margin-top: -20px;
+      width: 100%;
+      margin-top: -2vw;
     }
   }
-
 }
-
 /*about flex*/
 .about__list {
-// display: flex;
-// justify-content: center;
-// margin: 6% 0 5% 5%;
+  // border: 1px solid #333;
+  background-color: #ffe4e1;
+display: flex;
+justify-content: center;
+margin-bottom: 5%;
+padding-top: 5%;
   
   &--img {
     width: 30%;
-    padding: 0 5% 5% 0;
+    height: 50%;
+    padding: 5% 5% 5% 5%;
 }
 &--item {
-  
-    font-size: 10%;
-
+    padding-bottom: 5%;
+    font-size: 1rem;
+    text-align: left;
 }
+&--like {
+  text-align: center;
+  font-size: 3rem;
+  &--1 {
+    width: 2%;
+  }
+}
+.s2 {
+  width: 10%;
+}
+.about__list--likes p{
+  font-size: 3rem;
+}
+.ebi {
+    position: relative;
+    font-size: 3rem;
+    top: 20%;
+  }
 }
 
 .centerBox {
@@ -368,6 +398,8 @@ textarea {
 }
 input[type="submit"] {
   opacity: 0;
+  position: relative;
+  top: 40px;
 }
 
 
