--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -157,16 +157,9 @@ scroll span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-<<<<<<< Updated upstream
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding: 2%;
-=======
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  padding: 1%;
->>>>>>> Stashed changes
 }
 .gnav__item {
   font-size: 2rem;
@@ -317,7 +310,6 @@ a.btn-flat:hover:before {
 }
 
 /*skill grid*/
-<<<<<<< Updated upstream
 .skillBox {
   font-size: 2rem;
   padding: 3% 0 3% 0;
@@ -331,8 +323,6 @@ a.btn-flat:hover:before {
   border-bottom: 1px solid #707070;
 }
 
-=======
->>>>>>> Stashed changes
 .skill__list {
   text-align: center;
   display: grid;
@@ -348,7 +338,6 @@ a.btn-flat:hover:before {
 }
 
 /*about flex*/
-<<<<<<< Updated upstream
 .about__list {
   background-color: #ffe4e1;
   display: -webkit-box;
@@ -361,14 +350,10 @@ a.btn-flat:hover:before {
   padding-top: 5%;
 }
 .about__list--img {
-=======
-.aboutBox__list--img {
->>>>>>> Stashed changes
   width: 30%;
   height: 50%;
   padding: 5% 5% 5% 5%;
 }
-<<<<<<< Updated upstream
 .about__list--item {
   padding-bottom: 5%;
   font-size: 1rem;
@@ -391,11 +376,10 @@ a.btn-flat:hover:before {
   position: relative;
   font-size: 3rem;
   top: 20%;
-=======
+}
 
 .aboutBox__list--text {
   font-size: 10px;
->>>>>>> Stashed changes
 }
 
 .centerBox {
