--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -4,8 +4,8 @@
 @use 'mediaq';
 
 body {
-  // Swear Display Light
-  // font-family: swear-display, serif;
+  //  
+  font-family: swear-display, serif;
   font-weight: 400;
 
 }
