--- a/portfolio/scss/_var.scss
+++ b/portfolio/scss/_var.scss
@@ -12,7 +12,7 @@ $point-color :#707070;
 
 // メディアクエリ
 @mixin sp1 {
-  @media screen and (max-width: 768px){
+  @media (max-width: 768px){
     @content;
   }
   }
