--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -360,23 +360,28 @@ a.btn-flat:hover:before {
   font-size: 1rem;
   text-align: left;
 }
-.about__list--like {
-  text-align: center;
-  font-size: 3rem;
+.about__list--likes {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  text-align: start;
+  font-size: 1rem;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
-.about__list--like--1 {
-  width: 2%;
+.about__list--likes img {
+  width: 30%;
+  margin: 0 auto;
 }
-.about__list .s2 {
-  width: 10%;
+.about__list--likes--1 {
+  padding-left: 20%;
 }
-.about__list .about__list--likes p {
-  font-size: 3rem;
+.about__list .aboutLike {
+  width: 80%;
 }
-.about__list .ebi {
-  position: relative;
-  font-size: 3rem;
-  top: 20%;
+
+.ebi {
+  background: pink;
 }
 
 .aboutBox__list--text {
