--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -3,6 +3,10 @@
 @use 'var'as v;
 @use 'mediaq';
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   //  
   font-family: swear-display, serif;
@@ -23,6 +27,7 @@ a {
   position: relative;
   text-decoration: none;
 }
+
 .my-parts::after {
   position: absolute;
   content: '';
@@ -30,12 +35,14 @@ a {
   left: 0;
   width: 0;
   height: 1px;
-  background:v.$point-color;
+  background: v.$point-color;
   transition: all .3s ease 0s;
 }
+
 .my-parts:hover {
   cursor: pointer;
 }
+
 .my-parts:hover::after {
   width: 100%;
 }
@@ -67,11 +74,12 @@ a {
       font-weight: normal;
       // opacity: 0;
       color: #fff;
+
       a {
         color: #fff;
       }
     }
-  
+
     .indent {
       // opacity: 0;
       position: absolute;
@@ -82,20 +90,22 @@ a {
     }
   }
 }
+
 scroll {
   // text-align: center;
   position: absolute;
   bottom: 5rem;
   right: 100%;
-     //丁度よく下側に設置するのにposition+bottomプロパティを使用
+  //丁度よく下側に設置するのにposition+bottomプロパティを使用
   width: 2em;
   height: 2em;
-     //スクロールボタンのタップorクリックを受け付けるサイズ
+
+  //スクロールボタンのタップorクリックを受け付けるサイズ
   span {
     width: 3em;
     height: 3em;
     position: absolute;
-     //矢印がずれるためtopなどで位置調整をする
+    //矢印がずれるためtopなどで位置調整をする
     top: 50%;
     left: 100%;
     transform: rotate(-45deg);
@@ -103,43 +113,49 @@ scroll {
     border-bottom: 1px solid #F5F5F5;
     z-index: 2;
     animation: popping-arrow 2s infinite ease-out;
-     //アニメーションさせる場合の設定
-     //@keyframesで設定したアニメーション名、秒数、infinite→無限繰り返し
+    //アニメーションさせる場合の設定
+    //@keyframesで設定したアニメーション名、秒数、infinite→無限繰り返し
   }
 }
 
 @keyframes popping-arrow {
-0% {
-  transform: translateY(0) rotate(-45deg);
-}
-30% {
-  transform: translateY(.5em) rotate(-45deg);
-}
-60% {
-  transform: translateY(0) rotate(-45deg);
-}
-}
-.next-section {
-padding: 3em 1.5em;
-background-color: #78909C;
-h2 {
-  margin-bottom: 2em;
-  text-align: center;
-  font-size: 24px;
-  letter-spacing: .1em;
-  &::after {
-    content: '';
-    display: block;
-    width: 10%;
-    height: 2px;
-    margin-top: .5em;
-    margin-left: 45%;
-    background: #F5F5F5;
+  0% {
+    transform: translateY(0) rotate(-45deg);
+  }
+
+  30% {
+    transform: translateY(.5em) rotate(-45deg);
+  }
+
+  60% {
+    transform: translateY(0) rotate(-45deg);
   }
 }
-p {
-  padding: 1.5em;
-}
+
+.next-section {
+  padding: 3em 1.5em;
+  background-color: #78909C;
+
+  h2 {
+    margin-bottom: 2em;
+    text-align: center;
+    font-size: 24px;
+    letter-spacing: .1em;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 10%;
+      height: 2px;
+      margin-top: .5em;
+      margin-left: 45%;
+      background: #F5F5F5;
+    }
+  }
+
+  p {
+    padding: 1.5em;
+  }
 }
 
 /*gnav*/
@@ -156,8 +172,8 @@ p {
     padding: 2%;
 
 
-    
-  
+
+
   }
 
   // flex子要素
@@ -237,6 +253,7 @@ p {
   display: flex;
   width: 80%;
   margin: 0 auto;
+
   &--item {
     width: 90%;
   }
@@ -246,7 +263,7 @@ p {
 .btn,
 a.btn,
 button.btn {
-  border: 2px solid pink ;
+  border: 2px solid pink;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1.5;
@@ -267,6 +284,7 @@ button.btn {
   color: #707070;
   border-radius: 0.5rem;
 }
+
 a.btn-flat {
   overflow: hidden;
   padding: 1.5rem 4rem;
@@ -307,6 +325,7 @@ a.btn-flat:hover:before {
   font-size: 2rem;
   padding: 3% 0 3% 0;
 }
+
 // コーディングとかデザインとか題名
 .cateBox {
   font-size: 3rem;
@@ -324,62 +343,80 @@ a.btn-flat:hover:before {
   grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr;
   grid-template-rows: 3fr;
   gap: 10px;
+  @include v.sp1 {
+    grid-template-columns: 1fr 2fr 1fr 2fr;
+  }
 
 
   &--item {
+
     // background-color: pink;
     img {
       width: 100%;
       margin-top: -2vw;
     }
+    @include v.sp1 {}
   }
 }
+
 /*about flex*/
 
 .about__list {
   // border: 1px solid #333;
   background-color: #ffe4e1;
-display: flex;
-justify-content: center;
-margin-bottom: 5%;
-padding-top: 5%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+  padding-top: 5%;
 
   // アイコン
   &--img {
     width: 30%;
     height: 50%;
     padding: 5% 5% 5% 5%;
-}
+  }
 
 
-&--item {
+  &--item {
     padding-bottom: 5%;
     font-size: 1rem;
     text-align: left;
-}
-&--likes {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  text-align: start;
-  font-size: 1rem;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  img {
-    width: 30%;
-    margin: 0 auto;
-   
+    @include v.sp1 {
+      padding-right: 5%;
+    }
   }
- 
+
+  &--likes {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    text-align: start;
+    font-size: 1rem;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    @include v.sp1 {
+      padding-right: 5%;
+      padding-bottom: 10%;
+    }
+
+    img {
+      width: 30%;
+      margin: 0 auto;
+
+    }
+
+  }
+
+  &--likes--1 {
+
+    padding-left: 20%;
+  }
+
+  .aboutLike {
+    width: 80%;
+  }
 }
-&--likes--1 {
-  
-   padding-left: 20%;
- }
-.aboutLike {
-  width: 80%;
-}
-}
+
 .ebi {
   background: pink;
 }
@@ -389,27 +426,33 @@ padding-top: 5%;
 .aboutBox__list--text {
   font-size: 10px;
 }
+
 .centerBox {
   padding-bottom: 5%;
- 
 
-.thanks {
-  font-size: 2rem;
-  padding-bottom: 5%;
-}
+
+  .thanks {
+    font-size: 2rem;
+    padding-bottom: 5%;
+  }
 }
 
 .cbtBox__flex {
-width: 30%;
-margin:0 auto;
-&--item {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10%;
-}
-.submitBtn {
-  margin-top: 20%;
-}
+  width: 30%;
+  margin: 0 auto;
+  @include v.sp1 {
+    width: 50%;
+  }
+
+  &--item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10%;
+  }
+
+  .submitBtn {
+    margin-top: 20%;
+  }
 }
 
 input,
@@ -418,6 +461,7 @@ textarea {
   border: 1px solid #000;
   width: 80%;
 }
+
 input[type="submit"] {
   opacity: 0;
   position: relative;
@@ -430,14 +474,11 @@ footer {
   background-image: url(/images/footer08-2.jpg);
   min-height: 20vh;
   background-size: cover;
+
   p {
     font-size: 20px;
     text-align: center;
     padding: 3%;
   }
 
-}
-
-@media screen and (max-width: 767px){
-  
 }
