--- a/scss/style.scss
+++ b/scss/style.scss
@@ -190,7 +190,7 @@ scroll {
   margin: 6% 0 6% 0;
   display: flex;
   justify-content: center;
-  background-image: url(/images/Marble07.jpg);
+  background-image: url(../images/Marble07.jpg);
   background-repeat: no-repeat;
   text-align: center;
   width: 30%;
