--- a/scss/style.scss
+++ b/scss/style.scss
@@ -203,7 +203,7 @@ scroll {
   margin: 6% 0 0 0;
   display: flex;
   justify-content: center;
-  background-image: url(/images/Marble09-h.jpg);
+  background-image: url(../images/Marble09-h.jpg);
   background-repeat: no-repeat;
   text-align: center;
   width: 30%;
@@ -216,7 +216,7 @@ scroll {
   margin: 10% 0 10% 0;
   display: flex;
   justify-content: center;
-  background-image: url(/images/Marble08.jpg);
+  background-image: url(../images/Marble08.jpg);
   background-repeat: no-repeat;
   text-align: center;
   width: 30%;
@@ -229,7 +229,7 @@ scroll {
   margin: 6% 0 6% 0;
   display: flex;
   justify-content: center;
-  background-image: url(/images/Marble08-2.jpg);
+  background-image: url(../images/Marble08-2.jpg);
   background-repeat: no-repeat;
   text-align: center;
   width: 30%;
@@ -471,7 +471,7 @@ input[type="submit"] {
 
 
 footer {
-  background-image: url(/images/footer08-2.jpg);
+  background-image: url(../images/footer08-2.jpg);
   min-height: 20vh;
   background-size: cover;
 
