--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -165,6 +165,10 @@ scroll span {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding: 2%;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  width: 100%;
 }
 .gnav__item {
   font-size: 2rem;
@@ -172,6 +176,102 @@ scroll span {
   padding: 1vw;
 }
 
+#gnavi-link.fixed {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+}
+
+#hamburger .btn-gNav span {
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: #666;
+  border-radius: 10px;
+  -webkit-transition: all 400ms;
+  transition: all 400ms;
+}
+
+#hamburger .btn-gNav span:nth-child(1) {
+  top: 0;
+}
+
+#hamburger .btn-gNav span:nth-child(2) {
+  top: 10px;
+}
+
+#hamburger .btn-gNav span:nth-child(3) {
+  top: 20px;
+}
+
+#hamburger .btn-gNav {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 30px;
+  height: 24px;
+  z-index: 3;
+}
+
+#gNav {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  height: 20px;
+  z-index: 2;
+}
+
+#gNav.open {
+  right: 0px;
+}
+
+#gNav .gNav-menu {
+  width: 100%;
+  height: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .btn-gNav {
+    display: none;
+  }
+
+  #gNav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 50px;
+  }
+
+  #gNav .gNav-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+    height: 20%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding-left: 50px;
+  }
+
+  #gNav .gNav-menu li {
+    padding-top: 15px;
+  }
+}
 /*h2画像*/
 .h2Img {
   margin: 6% 0 6% 0;
