--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -227,6 +227,17 @@ position: fixed;
 	height: 20px;
 	z-index: 2;
 }
+
+//閉じる
+#hamburger .btn-gNav .open span:nth-child(1) {
+	top:0;
+}
+#hamburger .btn-gNav .open span:nth-child(2) {
+	top:10px;
+}
+#hamburger .btn-gNav .open span:nth-child(3) {
+	top:20px;
+}
 #gNav.open{
 	right: 0px;
 }
