--- a/portfolio/css/about.css
+++ b/portfolio/css/about.css
@@ -78,6 +78,16 @@ a {
   color: #fcfcfc;
   text-shadow: 1px 1px 0 #707070, -1px -1px 0 #707070, -1px 1px 0 #707070, 1px -1px 0 #707070, 0px 1px 0 #707070, -1px 0 #707070, -1px 0 0 #707070, 1px 0 0 #707070;
 }
+@media (max-width: 768px) {
+  .h2Img__about {
+    margin: 10% auto 10% auto;
+  }
+}
+@media (max-width: 500px) {
+  .h2Img__about {
+    width: 40%;
+  }
+}
 
 .about__col {
   background-color: #ffe4e1;
@@ -122,6 +132,15 @@ a {
 
 .aboutBox__list--s2 img {
   width: 35%;
+}
+
+.dream {
+  padding-top: 10%;
+  padding-bottom: 10%;
+  background-color: #ffe4e1;
+}
+.dream__text {
+  padding-bottom: 5%;
 }
 
 footer {
