--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -70,7 +70,12 @@ a {
 .headerTop__img h1 a {
   color: #fff;
 }
-@media (max-width: 414px) {
+@media (max-width: 768px) {
+  .headerTop__img h1 {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 500px) {
   .headerTop__img h1 {
     opacity: 0;
   }
@@ -83,7 +88,7 @@ a {
   color: #fff;
   padding: 1rem;
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .headerTop__img .indent {
     opacity: 0;
   }
@@ -232,43 +237,6 @@ scroll span {
   z-index: 2;
 }
 
-#hamburger .btn-gNav.open span:nth-child(1) {
-  top: 10px;
-  left: -15px;
-  -webkit-transform: translateY(6px) rotate(-45deg);
-          transform: translateY(6px) rotate(-45deg);
-  width: 100%;
-}
-
-#hamburger .btn-gNav.open span:nth-child(2) {
-  opacity: 0;
-}
-
-#hamburger .btn-gNav.open span:nth-child(3) {
-  top: 22px;
-  left: -15px;
-  -webkit-transform: translateY(-6px) rotate(45deg);
-          transform: translateY(-6px) rotate(45deg);
-  width: 100%;
-}
-
-#gNav.open {
-  right: 0px;
-}
-
-#gNav .gNav-menu {
-  width: 100%;
-  height: 30%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-}
-
 @media screen and (min-width: 768px) {
   .btn-gNav {
     display: none;
@@ -338,7 +306,7 @@ scroll span {
     margin: 10% auto 10% auto;
   }
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .h2Img__skill {
     width: 40%;
   }
@@ -364,7 +332,7 @@ scroll span {
     margin: 10% auto 10% auto;
   }
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .h2Img__about {
     margin-top: 20%;
     margin-bottom: 20%;
@@ -392,7 +360,7 @@ scroll span {
     margin: 10% auto 10% auto;
   }
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .h2Img__contact {
     width: 45%;
   }
@@ -503,7 +471,7 @@ a.btn-flat:hover:before {
     grid-template-columns: 1fr 2fr 1fr 2fr;
   }
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .skill__list {
     display: block;
   }
@@ -518,7 +486,7 @@ a.btn-flat:hover:before {
     font-size: 2rem;
   }
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .skill__list--item {
     padding-top: 0;
   }
@@ -601,7 +569,7 @@ a.btn-flat:hover:before {
   font-size: 2rem;
   padding-bottom: 5%;
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .centerBox .thanks {
     margin-bottom: 10%;
   }
@@ -616,7 +584,7 @@ a.btn-flat:hover:before {
     width: 50%;
   }
 }
-@media (max-width: 414px) {
+@media (max-width: 500px) {
   .cbtBox__flex {
     width: 85%;
   }
@@ -648,7 +616,7 @@ input[type=submit] {
 }
 
 footer {
-  background-image: url(/images/footer08-2.jpg);
+  background-image: url(../images/footer08-2.jpg);
   min-height: 20vh;
   background-size: cover;
 }
